[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/player/debug_rays.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/Interactor.gd" type="Script" id=2]
[ext_resource path="res://scripts/player/player_movement.gd" type="Script" id=3]
[ext_resource path="res://scripts/player/sprite_animator.gd" type="Script" id=4]
[ext_resource path="res://player resources/playerspriteframes.tres" type="SpriteFrames" id=5]
[ext_resource path="res://scenes/modular scenes/GrabCast.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 5.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 5 )
animation = "Idle_down"
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )

[node name="InteractRay" type="RayCast2D" parent="."]
position = Vector2( 0, 2.5 )
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 2
collide_with_areas = true
script = ExtResource( 2 )

[node name="DebugRayDraw" type="Node2D" parent="."]
position = Vector2( 0, 2.5 )
script = ExtResource( 1 )

[node name="GrabRay" type="RayCast2D" parent="."]
position = Vector2( 0, 2.5 )
enabled = true
cast_to = Vector2( 8, 0 )
script = ExtResource( 6 )

[connection signal="debug_rays" from="." to="DebugRayDraw" method="_on_debug_rays"]
[connection signal="on_move" from="." to="AnimatedSprite" method="_on_move"]
[connection signal="draw_interact_ray" from="InteractRay" to="DebugRayDraw" method="_on_draw_interact_ray"]
